--- a/Style.css
+++ b/Style.css
@@ -1918,7 +1918,7 @@ button.send:hover {
 
 /*--------------------------------------------------------------*************------------------------------------------------------------------------------*/
 #preloader {
-  background: #fff url(/preloader.gif) no-repeat center center;
+  background: #fff url(preloader.gif) no-repeat center center;
   height: 100vh;
   width: 100%;
   position: fixed;
