--- a/Style.css
+++ b/Style.css
@@ -569,7 +569,7 @@ nav .icon-burger .line {
   float: left;
   position: relative;
   padding: 30px 0;
-  background: #fcfcfd;
+  background: #fff;
   z-index: 1;
   width: 100%;
 }
